--- a/_modules/xmlProcess.html
+++ b/_modules/xmlProcess.html
@@ -254,6 +254,9 @@
 <span class="sd">        val : str</span>
 <span class="sd">        r_count: int</span>
 
+<span class="sd">        See Also</span>
+<span class="sd">        --------</span>
+<span class="sd">        convert_int_to_roman</span>
 
 <span class="sd">        &quot;&quot;&quot;</span>
 
@@ -280,6 +283,9 @@
 <span class="sd">        tr : elementTree</span>
 <span class="sd">            Element tree of the  current file</span>
 
+<span class="sd">        See Also</span>
+<span class="sd">        -------</span>
+<span class="sd">        create_metadata_path</span>
 
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">r</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">tr</span><span class="o">.</span><span class="n">getroot</span><span class="p">()</span>
@@ -406,8 +412,8 @@
 
 <span class="sd">        See Also</span>
 <span class="sd">        --------</span>
-<span class="sd">        merge_metadata :  reads a metadata file path and  merge its content into the metadata section</span>
-<span class="sd">        set_numbering_tags:  Automatic numbering of the list of elements</span>
+<span class="sd">        merge_metadata, set_numbering_tags,set_uuids_for_back_matter,sort_footnotes,sort_references,set_numbering_values</span>
+<span class="sd">        ,create_dirs_recursive,create_xml_file</span>
 
 
 
@@ -451,16 +457,20 @@
 
 <div class="viewcode-block" id="XMLProcess.run"><a class="viewcode-back" href="../xmlProcess.html#xmlProcess.XMLProcess.run">[docs]</a>    <span class="k">def</span> <span class="nf">run</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        main function  which call xml processing</span>
-<span class="sd">        :return:</span>
+<span class="sd">        Runs the configuration on the processing object</span>
+
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">process_xml_file</span><span class="p">()</span></div></div>
 
 
 <div class="viewcode-block" id="main"><a class="viewcode-back" href="../xmlProcess.html#xmlProcess.main">[docs]</a><span class="k">def</span> <span class="nf">main</span><span class="p">():</span>
     <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    main method</span>
-<span class="sd">    :return:</span>
+<span class="sd">    Initializes a processing object from  a xml file and   and runs it.</span>
+
+<span class="sd">    See Also</span>
+<span class="sd">    --------</span>
+<span class="sd">    run</span>
+
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">xp</span> <span class="o">=</span> <span class="n">XMLProcess</span><span class="p">()</span>
     <span class="n">xp</span><span class="o">.</span><span class="n">run</span><span class="p">()</span></div>
