--- a/_modules/xmlProcess.html
+++ b/_modules/xmlProcess.html
@@ -57,7 +57,12 @@
 
 <span class="sd">The current functions are limited to JATS and BITS XML Scheme of the Library of Congress. However the methods defined in</span>
 <span class="sd">this program can be used to modify any element tree. Some of the  current avaliable functions are sorting footnotes,</span>
-<span class="sd">numbering elements of a certain type  or setting unique ids to a certain element type.</span>
+<span class="sd">numbering elements of a certain type  or setting unique ids to a certain element types.</span>
+
+<span class="sd">* https://github.com/withanage/mpt</span>
+<span class="sd">* Repository and issue-tracker: https://github.com/withanage/mpt/issues</span>
+<span class="sd">* Licensed under terms of GPL 3  license (LICENSE.md)</span>
+<span class="sd">* Copyright (c) 2016 Dulip Withanage, University of Heidelberg</span>
 
 
 <span class="sd">Usage:</span>
@@ -72,7 +77,8 @@
 <span class="sd">    -r  --remove-references-unused</span>
 <span class="sd">    -s --sort-references=&lt;tag list as comma seperated lists&gt;</span>
 <span class="sd">    -u --set-uuids=&lt;element types as comma seperated list&gt;</span>
-<span class="sd">    -v --set-numbering-values=&lt;numbering values e.g. roman , roman[1,2] e.g. [xref,ref-type,fn,[1,2]] &gt;</span>
+<span class="sd">    -v --set-numbering-values=&lt;numbering values, additionaly roman numbers e.g.xref,ref-type,fn,{1:2} &gt;</span>
+
 
 
 <span class="sd">&quot;&quot;&quot;</span>
@@ -413,7 +419,7 @@
 <span class="sd">        See Also</span>
 <span class="sd">        --------</span>
 <span class="sd">        merge_metadata, set_numbering_tags,set_uuids_for_back_matter,sort_footnotes,sort_references,set_numbering_values</span>
-<span class="sd">        ,create_dirs_recursive,create_xml_file</span>
+
 
 
 
