--- a/_modules/xmlProcess.html
+++ b/_modules/xmlProcess.html
@@ -59,12 +59,6 @@
 <span class="sd">this program can be used to modify any element tree. Some of the  current avaliable functions are sorting footnotes,</span>
 <span class="sd">numbering elements of a certain type  or setting unique ids to a certain element types.</span>
 
-<span class="sd">* https://github.com/withanage/mpt</span>
-<span class="sd">* Repository and issue-tracker: https://github.com/withanage/mpt/issues</span>
-<span class="sd">* Licensed under terms of GPL 3  license (LICENSE.md)</span>
-<span class="sd">* Copyright (c) 2016 Dulip Withanage, University of Heidelberg</span>
-
-
 <span class="sd">Usage:</span>
 <span class="sd">    xmlProcess.py  &lt;input_file&gt;  &lt;path&gt; [options]</span>
 
@@ -79,6 +73,10 @@
 <span class="sd">    -u --set-uuids=&lt;element types as comma seperated list&gt;</span>
 <span class="sd">    -v --set-numbering-values=&lt;numbering values, additionaly roman numbers e.g.xref,ref-type,fn,{1:2} &gt;</span>
 
+<span class="sd">* Web : https://github.com/withanage/mpt</span>
+<span class="sd">* Repository and issue-tracker: https://github.com/withanage/mpt/issues</span>
+<span class="sd">* Licensed under terms of GPL 3  license (LICENSE.md)</span>
+<span class="sd">* Copyright (c) 2016 Dulip Withanage, University of Heidelberg</span>
 
 
 <span class="sd">&quot;&quot;&quot;</span>
