--- a/_modules/mpt.html
+++ b/_modules/mpt.html
@@ -60,10 +60,6 @@
 <span class="sd">the current typesetter. If chaining is not set, all the typesetters take the set of files and execute the typesetter and</span>
 <span class="sd">generate the output.</span>
 
-<span class="sd">Notes</span>
-<span class="sd">-------</span>
-<span class="sd">This program may be used to consolidate output files , generated from a certain tool.  But a consolidation tool should</span>
-<span class="sd">be set as the last tool in a process chain.</span>
 
 <span class="sd">Usage:</span>
 <span class="sd">    preProcess.py  &lt;config_file&gt; [options]</span>
@@ -74,7 +70,17 @@
 <span class="sd">--------</span>
 <span class="sd">python /usr/local/mpt/static/tools/mpt.py /home/wit/mpt.json  --debug</span>
 
+<span class="sd">Notes</span>
+<span class="sd">-------</span>
+<span class="sd">This program may be used to consolidate output files, generated from a certain tool.  But a consolidation tool should</span>
+<span class="sd">be set as the last tool in a process chain.</span>
 
+<span class="sd">Information</span>
+<span class="sd">-----------</span>
+<span class="sd">* Web : https://github.com/withanage/mpt</span>
+<span class="sd">* Repository and issue-tracker: https://github.com/withanage/mpt/issues</span>
+<span class="sd">* Licensed under terms of GPL 3  license (LICENSE.md)</span>
+<span class="sd">* Copyright (c) 2016 Dulip Withanage, University of Heidelberg</span>
 
 <span class="sd">&quot;&quot;&quot;</span>
 
