--- a/_modules/mpt.html
+++ b/_modules/mpt.html
@@ -75,12 +75,10 @@
 <span class="sd">This program may be used to consolidate output files, generated from a certain tool.  But a consolidation tool should</span>
 <span class="sd">be set as the last tool in a process chain.</span>
 
-<span class="sd">Information</span>
-<span class="sd">-----------</span>
-<span class="sd">* Web : https://github.com/withanage/mpt</span>
-<span class="sd">* Repository and issue-tracker: https://github.com/withanage/mpt/issues</span>
-<span class="sd">* Licensed under terms of GPL 3  license (LICENSE.md)</span>
-<span class="sd">* Copyright (c) 2016 Dulip Withanage, University of Heidelberg</span>
+<span class="sd">Web : https://github.com/withanage/mpt</span>
+<span class="sd">Repository and issue-tracker: https://github.com/withanage/mpt/issues</span>
+<span class="sd">Licensed under terms of GPL 3  license [LICENSE.md](https://github.com/withanage/mpt/blob/master/LICENSE.md)</span>
+<span class="sd">Copyright (c) 2016 Dulip Withanage, University of Heidelberg</span>
 
 <span class="sd">&quot;&quot;&quot;</span>
 
