--- a/_modules/xmlProcess.html
+++ b/_modules/xmlProcess.html
@@ -76,7 +76,6 @@
 <span class="sd">* Web : https://github.com/withanage/mpt</span>
 <span class="sd">* Repository and issue-tracker: https://github.com/withanage/mpt/issues</span>
 <span class="sd">* Licensed under terms of GPL 3  license (LICENSE.md)</span>
-<span class="sd">* Copyright (c) 2016 Dulip Withanage, University of Heidelberg</span>
 
 
 <span class="sd">&quot;&quot;&quot;</span>
@@ -106,12 +105,10 @@
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Standalone module to combine, clean and modify a JATS XML file and optionally inject BITS Metadata headers.</span>
 
-<span class="sd">    Features:        Add Id numbering for any tag type</span>
-<span class="sd">        Clean comments</span>
-<span class="sd">        Remove unused references</span>
-<span class="sd">        Set numbering</span>
-<span class="sd">        Add unique ids to certain tag types</span>
-<span class="sd">        Sort references</span>
+<span class="sd">    Features</span>
+<span class="sd">    --------</span>
+<span class="sd">    add Id numbering for any tag type, clean comments, remove unused references,</span>
+<span class="sd">    set numbering, add unique ids to certain tag types, sort references</span>
 
 <span class="sd">    &quot;&quot;&quot;</span>
 
