--- a/modules.html
+++ b/modules.html
@@ -101,6 +101,7 @@
       </ul>
     </div>
     <div class="footer" role="contentinfo">
+        &#169; Copyright 2016, Dulip Withanage, University of Heidelberg.
     </div>
   </body>
 </html>
