--- a/xmlMerge.html
+++ b/xmlMerge.html
@@ -192,6 +192,7 @@ xmlMerge.py -h &#8211;help</dd>
       </ul>
     </div>
     <div class="footer" role="contentinfo">
+        &#169; Copyright 2016, Dulip Withanage, University of Heidelberg.
     </div>
   </body>
 </html>
