--- a/_modules/xmlMerge.html
+++ b/_modules/xmlMerge.html
@@ -268,6 +268,7 @@
       </ul>
     </div>
     <div class="footer" role="contentinfo">
+        &#169; Copyright 2016, Dulip Withanage, University of Heidelberg.
     </div>
   </body>
 </html>
