--- a/mpt.html
+++ b/mpt.html
@@ -445,6 +445,7 @@ certain file</p>
       </ul>
     </div>
     <div class="footer" role="contentinfo">
+        &#169; Copyright 2016, Dulip Withanage, University of Heidelberg.
     </div>
   </body>
 </html>
