--- a/xmlProcess.html
+++ b/xmlProcess.html
@@ -396,6 +396,7 @@ elements.</td>
       </ul>
     </div>
     <div class="footer" role="contentinfo">
+        &#169; Copyright 2016, Dulip Withanage, University of Heidelberg.
     </div>
   </body>
 </html>
