--- a/_modules/mpt.html
+++ b/_modules/mpt.html
@@ -70,15 +70,16 @@
 <span class="sd">--------</span>
 <span class="sd">python /usr/local/mpt/static/tools/mpt.py /home/wit/mpt.json  --debug</span>
 
+
+
+<span class="sd">* Web : https://github.com/withanage/mpt</span>
+<span class="sd">* Repository and issue-tracker: https://github.com/withanage/mpt/issues</span>
+<span class="sd">* Licensed under terms of GPL 3  license (LICENSE.md)</span>
+
 <span class="sd">Notes</span>
 <span class="sd">-------</span>
 <span class="sd">This program may be used to consolidate output files, generated from a certain tool.  But a consolidation tool should</span>
 <span class="sd">be set as the last tool in a process chain.</span>
-
-<span class="sd">Web : https://github.com/withanage/mpt</span>
-<span class="sd">Repository and issue-tracker: https://github.com/withanage/mpt/issues</span>
-<span class="sd">Licensed under terms of GPL 3  license [LICENSE.md](https://github.com/withanage/mpt/blob/master/LICENSE.md)</span>
-<span class="sd">Copyright (c) 2016 Dulip Withanage, University of Heidelberg</span>
 
 <span class="sd">&quot;&quot;&quot;</span>
 
