--- a/_modules/xmlProcess.html
+++ b/_modules/xmlProcess.html
@@ -103,7 +103,7 @@
 
 <div class="viewcode-block" id="XMLProcess"><a class="viewcode-back" href="../xmlProcess.html#xmlProcess.XMLProcess">[docs]</a><span class="k">class</span> <span class="nc">XMLProcess</span><span class="p">(</span><span class="n">Debuggable</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    Standalone module to combine, clean and modify a JATS XML file and optionally inject BITS Metadata headers.</span>
+<span class="sd">    Standalone Processing object to combine, clean and modify a JATS XML file and optionally inject BITS Metadata headers.</span>
 
 <span class="sd">    Features</span>
 <span class="sd">    --------</span>
