--- a/mpt.html
+++ b/mpt.html
@@ -132,6 +132,10 @@ exit-code and  system error codes are captured and returned.</p>
 </tr>
 </tbody>
 </table>
+<div class="admonition seealso">
+<p class="first admonition-title">See also</p>
+<p class="last"><code class="xref py py-meth docutils literal"><span class="pre">subprocess.Popen()</span></code></p>
+</div>
 </dd></dl>
 
 <dl class="method">
@@ -179,6 +183,10 @@ and the sequence number of the current file.</p>
 </tr>
 </tbody>
 </table>
+<div class="admonition seealso">
+<p class="first admonition-title">See also</p>
+<p class="last"><code class="xref py py-meth docutils literal"><span class="pre">os.makedirs()</span></code></p>
+</div>
 </dd></dl>
 
 <dl class="method">
