--- a/_modules/debug.html
+++ b/_modules/debug.html
@@ -70,10 +70,26 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">debug</span> <span class="o">=</span> <span class="kc">False</span>
 
 <div class="viewcode-block" id="Debug.enable_debug"><a class="viewcode-back" href="../debug.html#debug.Debug.enable_debug">[docs]</a>    <span class="k">def</span> <span class="nf">enable_debug</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Enables debugging. Is generally  set by Module initialisation</span>
+
+<span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">debug</span> <span class="o">=</span> <span class="kc">True</span></div>
 
 <div class="viewcode-block" id="Debug.print_debug"><a class="viewcode-back" href="../debug.html#debug.Debug.print_debug">[docs]</a>    <span class="k">def</span> <span class="nf">print_debug</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">module</span><span class="p">,</span> <span class="n">message</span><span class="p">):</span>
-        <span class="sd">&#39;&#39;&#39; Print debug message &#39;&#39;&#39;</span>
+        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Print debug message</span>
+
+<span class="sd">        Parameters</span>
+<span class="sd">        ----------</span>
+<span class="sd">        module: python module</span>
+<span class="sd">             Returns the name of the module</span>
+<span class="sd">        message: str</span>
+<span class="sd">            message as a string</span>
+
+<span class="sd">        &quot;&quot;&quot;</span>
+
+
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">debug</span><span class="p">:</span>
             <span class="k">if</span> <span class="ow">not</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">message</span><span class="p">,</span> <span class="n">unicode</span><span class="p">):</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">fatal_error</span><span class="p">(</span>
